fixing the x-overflow

--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,7 @@
 
 body {
 	background-color: black;
+	overflow-x: hidden;
 }
 
 input:focus {
@@ -47,7 +48,7 @@ nav {
 }
 
 .technical-analysis {
-	width: 25%;
+	width: 25vw;
 	height: 47vh;
 }
 
@@ -93,7 +94,8 @@ body
 }
 
 .order-form {
-	width: fit-content;
+	max-width: 100%;
+	width: 100%;
 	position: relative;
 	top: 1em;
 	left: 1em;
@@ -104,7 +106,7 @@ body
 
 .order-form input {
 	max-width: 430px;
-	width: 30em;
+	width: 90%;
 	height: 55px;
 	background-color: #2d313aa8;
 	border: none;
